# public201

./: .gitignore  .licensed.yml  .pre-commit-config.yaml  .pre-commit-config.yaml.backup  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile-run  LICENSE  Makefile  README.md  greet.py  honey.json  main.tf  parser-OK-b4-Click.py  parser.py  pre-root.yaml  pyproject.toml  requirements.txt  secret-01  secret-02  secret.file  setup.cfg  setup.py  test_pre-commit.yaml  update-yaml.py  update.py  why.json
.github/: CODEOWNERS
.github/config/: hadolint-cfg.yaml  yamllint-cfg.yaml
.github/linters/: .checkov.yaml
.github/workflows/: .checkov.yaml  basic-validation.yml  checkov.yaml  ci-prereq.yaml  ci.yaml  coverage.yaml  cron-coverage.yaml  cron-tasks.yaml  cron-update-hooks.yaml  cron-update-pre-commit.yaml  dependency.yml  licensed.yml  poetry-export.yaml  pre-ci.yaml  pre-commit-run-all.yaml  pre-commit.yaml  reusable-build-test.yaml  reusable-codeql.yaml  scoreboard.yaml  super-linter.yml  tflint.yaml  tflint.yml  tfvalidate.yaml  track-pypi-version.yaml  yamllint.yaml
.github/workflows/config/: yamllint-cfg.yaml
.infracost/terraform_modules/: manifest.json
files/: honey.sh  pre.yaml
pre_commit_update/: run.py
python/: click-samples.py  ddog.py  requirements.txt
src/update_pre_commit/: run.py
terraform/: .terraform.lock.hcl  main.tf
tests/: test_run.py
tests/files/: pre-commit-config-invalid.yaml  pre-commit-config-isvalid.yaml  pre-commit-config.yaml
tests/unit/: test_ddog.py  test_person.py
tests/unit/files/: honey.cfg  honey.md  honey.yaml
tests/unit/python/: ddog.py  requests.py
tests/unit/terraform/: main.tf  versions.tf
update_pre_commit/: run.py
