[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools", "wheel" ]

[project]
name = "update-pre-commit"
version = "0.9.1"

readme = "README.md"
license-files = [ "LICENSE" ]
authors = [
  { name = "developers", email = "developers@tagdots.com" },
]
requires-python = ">=3.12.10"

classifiers = [
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
]

dependencies = [
  "click==8.2.0",
  "click-option-group==0.5.7",
  "gitpython==3.1.44",
  "pygithub==2.6.1",
  "pyyaml==6.0.2",
  "setuptools==80.7.1",
  "ulid-py==1.1",
  "virtualenv==20.31.2",
]
optional-dependencies.test = [ "build", "commitizen", "coverage", "flake8", "isort", "pre-commit", "twine" ]

urls.Changelog = "https://github.com/tagdots/update-pre-commit/blob/main/CHANGELOG.md"
urls.Documentation = "https://github.com/tagdots/update-pre-commit/blob/main/README.md"
urls.Homepage = "https://github.com/tagdots"
urls.Issues = "https://github.com/tagdots/update-pre-commit/issues"
urls.Repository = "https://github.com/tagdots/update-pre-commit"

scripts.update-pre-commit = "update_pre_commit.run:main"

[dependency-groups]
test = [
  "coverage[toml]",
]

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.setuptools.dynamic]
version = { attr = "src.update_pre_commit.__init__" }

[tool.pyproject-fmt]
column_width = 125
indent = 2
keep_full_version = true

[tool.coverage]
source = [ "." ]

[tool.coverage.run]
branch = true
command_line = "-m unittest discover -s tests/"
include = [ "src/update_pre_commit/*" ]
omit = [ "tests/*" ]

[tool.coverage.report]
fail_under = 80
show_missing = false
include = [ "src/update_pre_commit/*" ]

[tool.commitizen]
name = "cz_conventional_commits"
major_version_zero = false
tag_format = "$version"
update_changelog_on_bump = true
version_files = [
  "src/update_pre_commit/__init__.py:__version__",
]
version_provider = "pep621"
version_scheme = "pep440"
